--- a/index.html
+++ b/index.html
@@ -18,41 +18,65 @@
 		<meta property="og:description" content="Description Here"/>
 
 		<!-- Bootstrap -->
-	    <link href="css/styles.css" rel="stylesheet">
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
+	    <link href="css/styles.css" rel="stylesheet">
 	</head>
 
 	<body>
 					<!-- Header -->
 			   <header>
 			    <div class= "container">
-			    		<div class= "col-xs-2 col-sm-2 col-md-2">
+			    		<div class= "col-sm-1 col-md-1">
 			    		</div>
-			    		<div class= "col-xs-3 col-sm-3 col-md-3 left">
-			    			          <ul class="nav navbar-nav">
-							            <li class="active"> <a href="#">PORTEFOLIO</a> </li>
-							            <li> <a href="#">ABOUT</a> </li>
+			    		<div class= "col-sm-4 col-md-4 left">
+			    			          <ul class="nav navbar-nav navbar-right ">
+							            <li class="active"> <a href="#">PORTEFOLIO</a></li>
+							            <li class="nona"> <a href="#">.</a></li>
+							            <li><a href="#">ABOUT</a></li>
 							          </ul>
+					    </div>
+					    <div class= "col-sm-2 col-md-2 center">
+					    				<img src= "images/header2.png" class="center-block img-logo1"> <!-- logo -->
 			    		</div>
-			    		<div class= "col-xs-2 col-sm-2 col-md-2 logo">
-			    				<img src= "images/Logo.png" class="img-logo"> 
-			    		</div>
-			    		<div class= "col-xs-3 col-sm-3 col-md-3 right">
-			    						<ul class="nav navbar-nav">
-							            <li class="active"> <a href="#">BLOG</a> </li>
-							            <li> <a href="#">GET IN TOUCH</a> </li>
+			    		<div class= "col-sm-4 col-md-4 right">
+			    					   <ul class="nav navbar-nav navbar-left">
+							            <li class="active"> <a href="#">BLOG</a></li>
+							            <li class="nona"> <a href="#">.</a></li>
+							            <li><a href="#">GET IN TOUCH</a></li>
 							          </ul>
 			            </div>
-			    </div>
-			    <div class= "container">
-			    		<div class= "col-xs-5 col-sm-5 col-md-5">
+			            <div class= "col-sm-1 col-md-1">
 			    		</div>
-			    		<div class= "col-xs-2 col-sm-2 col-md-2 shape">
-			    				<img src= "images/Pointy_Thingy.png" class="pointy"> 
-			    		</div>
-
 			    </div>
 			   </header>
+
+				 <!-- Section 1 -->
+				<section id="section_one">
+					<div class="container">
+					 <div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-12"><img class="center-block img-responsive" src="images/portfolio.png" /></div>
+			    		</div>
+			    	 </div>
+			    	</div>
+				</section>
+
+				<section id="about">
+			    		<div class= "col-xs-12  col-sm-12 col-md-12">
+			    			<div class="center-block img-responsive" style="background-image:url(images/Image.png)">
+			    			<div class="container">
+			    				<div class= "col-xs-4  col-sm-4 col-md-4">
+			    				</div>
+			    				<div class= "col-xs-8  col-sm-8 col-md-8 description">
+			    					<h1>Smith Anderson</h1>
+			    					<h2>Illustrator & Character Designer</h2>
+			    					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
+			    					<img src= "images/social_media.png">
+			    			    </div>
+			    				
+			    			</div>
+			    		</div>
+
+				</section>
 			   
 
     </body>
