--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
 			    		</div>
 
 				</section>
+
+				<section id="contact">
+					<div class="container">
+						<div class="col-xs-6 col-sm-6 col-md-6">
+						<h1>Get In Touch</h1>
+						<h3>In order to get in touch use the contact form below:</h3>
+						<fieldset>
+									<input type="name" maxlength="40" value="  Name(Required)" class="name"/>
+									<input type="mail" maxlength="40" value="  Email(Required)" class="mail"/>
+									<input type="subject" maxlength="40" value="  Subject" class="subject"/>
+									<input type="message" maxlength="120" value="  Write your message here..." class="message"/>
+									<input type="send" value="SEND" class=" send"/>
+						</fieldset>
+			    	 </div>
+			    	</div>
+				</section>
+
+			</footer>
+			<footer>
 			   
 
     </body>
