--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 			    				<div class= "col-xs-8  col-sm-8 col-md-8 description">
 			    					<h1>Smith Anderson</h1>
 			    					<h2>Illustrator & Character Designer</h2>
-			    					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
+			    					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna prestium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
 			    					<img src= "images/social_media.png">
 			    			    </div>
-			    				
 			    			</div>
 			    		</div>
 
@@ -80,17 +79,38 @@
 
 				<section id="contact">
 					<div class="container">
-						<div class="col-xs-6 col-sm-6 col-md-6">
+						<div class="col-xs-2 col-sm-2 col-md-2">
+					   </div>
+						<div class="col-xs-6 col-sm-6 col-md-6 left">
 						<h1>Get In Touch</h1>
 						<h3>In order to get in touch use the contact form below:</h3>
+					   </div>
+					   	<div class="col-xs-4 col-sm-4 col-md-4">
+					   </div>
+					   </div>
+					   	<div class="container">
+					   	<div class="col-xs-2 col-sm-2 col-md-2">
+					   </div>
+					   	<div class="col-xs-6 col-sm-6 col-md-6 form">
 						<fieldset>
-									<input type="name" maxlength="40" value="  Name(Required)" class="name"/>
-									<input type="mail" maxlength="40" value="  Email(Required)" class="mail"/>
+									<input type="name" maxlength="40" value="  Name (Required)" class="name"/>
+									<input type="mail" maxlength="40" value="  Email (Required)" class="mail"/>
 									<input type="subject" maxlength="40" value="  Subject" class="subject"/>
 									<input type="message" maxlength="120" value="  Write your message here..." class="message"/>
 									<input type="send" value="SEND" class=" send"/>
 						</fieldset>
 			    	 </div>
+			    	    <div class="col-xs-3 col-sm-3 col-md-3 right">
+			    	    			<p>Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
+			    	    			<br>
+			    	    			<br>
+			    	    			<p><img src= "images/location.png">&nbsp&nbsp&nbsp&nbspElm St. 14/05 Lost City</p>
+			    	    			<p><img src= "images/phone.png"> &nbsp&nbsp+ 3528 331 86 35</p>
+			    	    			<img src= "images/mail.png">&nbsp&nbspinfo@hexalcorp.com</p>
+          
+			    	    </div>
+			    	    <div class="col-xs-1 col-sm-1 col-md-1">
+					   </div>
 			    	</div>
 				</section>
 
