--- a/index.html
+++ b/index.html
@@ -26,82 +26,84 @@
 					<!-- Header -->
 			   <header>
 			    <div class= "container">
-			    		<div class= "col-sm-1 col-md-1">
+			    		<div class= "col-xs-1 col-sm-1 col-md-1">
 			    		</div>
-			    		<div class= "col-sm-4 col-md-4 left">
-			    			          <ul class="nav navbar-nav navbar-right ">
-							            <li class="active"> <a href="#">PORTEFOLIO</a></li>
-							            <li class="nona"> <a href="#">.</a></li>
-							            <li><a href="#">ABOUT</a></li>
-							          </ul>
+			    		<div class= "col-xs-4 col-sm-4 col-md-4 left">
+			    			    <ul class="nav navbar-nav navbar-right ">
+							        <li class="active"> <a href="#">PORTEFOLIO</a></li>
+							        <li class="nona"> <a href="#">.</a></li>
+							        <li><a href="#">ABOUT</a></li>
+							    </ul>
 					    </div>
-					    <div class= "col-sm-2 col-md-2 center">
-					    				<img src= "images/header2.png" class="center-block img-logo1"> <!-- logo -->
+					    <div class= "col-xs-2 col-sm-2 col-md-2 center">
+					    		<img src= "images/header2.png" class="center-block img-logo"> <!-- logo -->
 			    		</div>
-			    		<div class= "col-sm-4 col-md-4 right">
-			    					   <ul class="nav navbar-nav navbar-left">
-							            <li class="active"> <a href="#">BLOG</a></li>
-							            <li class="nona"> <a href="#">.</a></li>
-							            <li><a href="#">GET IN TOUCH</a></li>
-							          </ul>
+			    		<div class= "col-xs-4 col-sm-4 col-md-4 right">
+			    				<ul class="nav navbar-nav navbar-left">
+							        <li class="active"> <a href="#">BLOG</a></li>
+							        <li class="nona"> <a href="#">.</a></li>
+							        <li><a href="#">GET IN TOUCH</a></li>
+							    </ul>
 			            </div>
-			            <div class= "col-sm-1 col-md-1">
+			            <div class= "col-xs-1 col-sm-1 col-md-1">
 			    		</div>
 			    </div>
 			   </header>
 
-				 <!-- Section 1 -->
-				<section id="section_one">
+				 <!-- Section 1: Portefolio -->
+				<section id="portefolio">
 					<div class="container">
-					 <div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12"><img class="center-block img-responsive" src="images/portfolio.png" /></div>
 			    		</div>
-			    	 </div>
 			    	</div>
 				</section>
 
+				<!-- Section 2: A propos -->
 				<section id="about">
+					<div class="container">
 			    		<div class= "col-xs-12  col-sm-12 col-md-12">
 			    			<div class="center-block img-responsive" style="background-image:url(images/Image.png)">
-			    			<div class="container">
-			    				<div class= "col-xs-4  col-sm-4 col-md-4">
+			    				<div class="container">
+			    					<div class= "col-sm-5 col-md-4">
+			    					</div>
+			    					<div class= "col-xs-12  col-sm-7 col-md-8 description">
+			    						<h1>Smith Anderson</h1>
+			    						<h2>Illustrator & Character Designer</h2>
+			    						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna prestium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
+			    						<img src= "images/social_media.png">
+			    			    	</div>
 			    				</div>
-			    				<div class= "col-xs-8  col-sm-8 col-md-8 description">
-			    					<h1>Smith Anderson</h1>
-			    					<h2>Illustrator & Character Designer</h2>
-			    					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor, nibh at sagittis tristique, enim magna prestium augue, eget consectetur sem dui non urna. Integer gravida, diam congue molestie fringilla, elit odio rhoncus turpis, ac dictum libero elit vel metus. Morbi egestas sit amet velit eget venenatis. Mauris porttitor, nibh at sagittis tristique, enim magna pretium augue, eget consectetur sem dui non urna</p>
-			    					<img src= "images/social_media.png">
-			    			    </div>
 			    			</div>
 			    		</div>
-
+			    	</div>
 				</section>
 
+				<!-- Section 2: Contact -->
 				<section id="contact">
 					<div class="container">
 						<div class="col-xs-2 col-sm-2 col-md-2">
-					   </div>
+					    </div>
 						<div class="col-xs-6 col-sm-6 col-md-6 left">
-						<h1>Get In Touch</h1>
-						<h3>In order to get in touch use the contact form below:</h3>
+							<h1>Get In Touch</h1>
+							<h3>In order to get in touch use the contact form below:</h3>
 					   </div>
 					   	<div class="col-xs-4 col-sm-4 col-md-4">
 					   </div>
-					   </div>
-					   	<div class="container">
+					</div>
+					<div class="container">
 					   	<div class="col-xs-2 col-sm-2 col-md-2">
-					   </div>
+					    </div>
 					   	<div class="col-xs-6 col-sm-6 col-md-6 form">
-						<fieldset>
+							<fieldset>
 									<input type="name" maxlength="40" value="  Name (Required)" class="name"/>
 									<input type="mail" maxlength="40" value="  Email (Required)" class="mail"/>
 									<input type="subject" maxlength="40" value="  Subject" class="subject"/>
 									<input type="message" maxlength="120" value="  Write your message here..." class="message"/>
 									<input type="send" value="SEND" class=" send"/>
-						</fieldset>
-			    	 </div>
+							</fieldset>
+			    	    </div>
 			    	    <div class="col-xs-3 col-sm-3 col-md-3 right">
-			    	    			<p>Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
+			    	    			<p><span>Quisque&nbspHendrerit :</span> purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
 			    	    			<br>
 			    	    			<br>
 			    	    			<p><img src= "images/location.png">&nbsp&nbsp&nbsp&nbspElm St. 14/05 Lost City</p>
@@ -110,13 +112,12 @@
           
 			    	    </div>
 			    	    <div class="col-xs-1 col-sm-1 col-md-1">
-					   </div>
+						</div>
 			    	</div>
 				</section>
 
-			</footer>
-			<footer>
-			   
-
+				<!-- Pied de page -->
+				</footer>
+				<footer>
     </body>
 </html>
