--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 
 <html>
 
@@ -37,7 +38,7 @@
 					    </div>
 					    <div class= "col-xs-2 col-sm-2 col-md-2 center">
 					    		<img src= "images/header2.png" class="center-block img-logo"> <!-- logo -->
-			    		</div>
+						</div>
 			    		<div class= "col-xs-4 col-sm-4 col-md-4 right">
 			    				<ul class="nav navbar-nav navbar-left">
 							        <li class="active"> <a href="#">BLOG</a></li>
